--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Meta tags for search engines -->
+    <meta name="description"
+        content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenis Park">
+    <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
     <!-- Title -->
     <title>Love Running</title>
     <!-- Favicon -->
@@ -13,6 +17,20 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
 </head>
 
-<body></body>
+<body>
+    <!-- Header -->
+    <header>
+        Header
+    </header>
+    <!-- Main Content -->
+    <main>
+        Main Content
+    </main>
+    <!-- Footer -->
+    <footer>
+        Footer
+    </footer>
+
+</body>
 
 </html>
