--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <a href="index.html">
         <h1 id="logo">Love Running</h1>
       </a>
-      <input type="checkbox" name="nav-toggle" id="nav-toggle">
+      <input type="checkbox" name="nav-toggle" id="nav-toggle" />
       <label for="nav-toggle" class="nav-toggle-label">X</label>
       <nav>
         <ul id="menu">
@@ -56,6 +56,26 @@
     <!-- Main content -->
     <main>Main content</main>
     <!-- Footer -->
-    <footer>Footer</footer>
+    <footer>
+      <ul>
+        <li>
+          <a
+            href="https://www.facebook.com"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit our Facebook page (opens in a new tab)"
+            ><i class="fa-brands fa-facebook"></i></a
+          >
+        </li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </footer>
+    <!-- Font awesome kit -->
+    <script
+      src="https://kit.fontawesome.com/1e754c32b5.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
