--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h1 id="logo">Love Running</h1>
       </a>
       <input type="checkbox" name="nav-toggle" id="nav-toggle" />
-      <label for="nav-toggle" class="nav-toggle-label">X</label>
+      <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
       <nav>
         <ul id="menu">
           <li><a href="" class="active">Home</a></li>
@@ -67,9 +67,33 @@
             ><i class="fa-brands fa-facebook"></i></a
           >
         </li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>
+          <a
+            href="https://www.twitter.com"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit our twitter page (opens in a new tab)"
+            ><i class="fa-brands fa-square-twitter"></i></a
+          >
+        </li>
+        <li>
+          <a
+            href="https://www.youtube.com"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit our youtube page (opens in a new tab)"
+            ><i class="fa-brands fa-square-youtube"></i></a
+          >
+        </li>
+        <li>
+          <a
+            href="https://www.instagram.com"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit our instagram page (opens in a new tab)"
+            ><i class="fa-brands fa-instagram"></i></a
+          >
+        </li>
       </ul>
     </footer>
     <!-- Font awesome kit -->
