Change main content in gallery page

--- a/gallery.html
+++ b/gallery.html
@@ -54,7 +54,7 @@
       </nav>
     </header>
     <!-- Main content -->
-    <main>Main content</main>
+    <main>Gallery main content</main>
     <!-- Footer -->
     <footer>
       <ul id="social-networks">
