--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
         <h1 id="logo">Love Running</h1>
       </a>
       <input type="checkbox" name="nav-toggle" id="nav-toggle" />
-      <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
+      <label for="nav-toggle" class="nav-toggle-label"
+        ><i class="fa-solid fa-bars"></i
+      ></label>
       <nav>
         <ul id="menu">
           <li><a href="index.html" class="active">Home</a></li>
@@ -61,6 +63,53 @@
           <h3>Dublin Docklands & Phoenix Park</h3>
         </div>
       </section>
+      <section id="reasons">
+        <h2>Why love running with us?</h2>
+        <div id="benefits">
+          <div id="benefits-physical">
+            <div>
+              <h3>FEEL HEALTHY <i class="fa-solid fa-heart-pulse"></i></h3>
+              <hr />
+              <p>
+                Since it improves aerobic fitness, running is a great way to
+                help improve your cardiovascular health. Plus, it burns calories
+                and can build strength.
+              </p>
+            </div>
+            <div>
+              <h3>FEEL STRONG <i class="fa-solid fa-dumbbell"></i></h3>
+              <hr />
+              <p>
+                Running strengthens your heart by pumping blood more effectively
+                through your body.
+              </p>
+            </div>
+          </div>
+          <div id="benefits-mental">
+            <div>
+              <h3>FEEL FREE <i class="fa-brands fa-fly"></i></h3>
+              <hr />
+              <p>
+                Physical exercise, running included, is known to release
+                endorphins in the brain. Endorphins make you more energetic,
+                more awake and, yes, happier.
+              </p>
+            </div>
+            <div>
+              <h3>GET SOCIAL <i class="fa-solid fa-globe"></i></h3>
+              <hr />
+              <p>
+                When we run with others, we can run farther and faster more
+                easily. Social running can pull you out of a running funk or low
+                mood, and inspire you to try new events.
+              </p>
+            </div>
+            <div id="benefits-image">
+              <div id="circle-cover-bg"></div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- Footer -->
     <footer>
@@ -71,8 +120,8 @@
             target="_blank"
             rel="noopener"
             aria-label="Visit our Facebook page (opens in a new tab)"
-            ><i class="fa-brands fa-facebook"></i></a
-          >
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
         </li>
         <li>
           <a
@@ -80,8 +129,8 @@
             target="_blank"
             rel="noopener"
             aria-label="Visit our twitter page (opens in a new tab)"
-            ><i class="fa-brands fa-square-twitter"></i></a
-          >
+            ><i class="fa-brands fa-square-twitter"></i
+          ></a>
         </li>
         <li>
           <a
@@ -89,8 +138,8 @@
             target="_blank"
             rel="noopener"
             aria-label="Visit our youtube page (opens in a new tab)"
-            ><i class="fa-brands fa-square-youtube"></i></a
-          >
+            ><i class="fa-brands fa-square-youtube"></i
+          ></a>
         </li>
         <li>
           <a
@@ -98,8 +147,8 @@
             target="_blank"
             rel="noopener"
             aria-label="Visit our instagram page (opens in a new tab)"
-            ><i class="fa-brands fa-instagram"></i></a
-          >
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
         </li>
       </ul>
     </footer>
