--- a/signup.html
+++ b/signup.html
@@ -44,17 +44,91 @@
         <h1 id="logo">Love Running</h1>
       </a>
       <input type="checkbox" name="nav-toggle" id="nav-toggle" />
-      <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
+      <label for="nav-toggle" class="nav-toggle-label"
+        ><i class="fa-solid fa-bars"></i
+      ></label>
       <nav>
         <ul id="menu">
           <li><a href="index.html">Home</a></li>
           <li><a href="gallery.html">Gallery</a></li>
-          <li><a href="signup.html"  class="active">Sign Up</a></li>
+          <li><a href="signup.html" class="active">Sign Up</a></li>
         </ul>
       </nav>
     </header>
     <!-- Main content -->
-    <main>Main content</main>
+    <main>
+      <section id="signup">
+        <form
+          action="https://formdump.codeinstitute.net"
+          method="post"
+          id="signup-form"
+        >
+          <h2>
+            <i class="fa-solid fa-heart-pulse"></i> Let's get you signed up!
+          </h2>
+          <label for="first_name">First Name</label>
+          <input
+            type="text"
+            id="first_name"
+            name="first_name"
+            class="text-input"
+            required
+          />
+          <br />
+          <label for="last_name">Last Name</label>
+          <input
+            type="text"
+            id="last_name"
+            name="last_name"
+            class="text-input"
+            required
+          />
+          <br />
+          <label for="email_address">Email Address</label>
+          <input
+            type="email"
+            id="email_address"
+            name="email_address"
+            class="text-input"
+            required
+          />
+          <div class="radio-buttons">
+            <div>
+              <label for="road">Road</label>
+              <input
+                type="radio"
+                id="road"
+                name="running_preference"
+                value="road"
+                checked
+                required
+              />
+            </div>
+            <div>
+              <label for="trail">Trail</label>
+              <input
+                type="radio"
+                id="trail"
+                name="running_preference"
+                value="trail"
+                required
+              />
+            </div>
+            <div>
+              <label for="both">Both</label>
+              <input
+                type="radio"
+                id="both"
+                name="running_preference"
+                value="both"
+                required
+              />
+            </div>
+          </div>
+          <button type="submit" class="join-button">Let's run!</button>
+        </form>
+      </section>
+    </main>
     <!-- Footer -->
     <footer>
       <ul id="social-networks">
@@ -64,8 +138,8 @@
             target="_blank"
             rel="noopener"
             aria-label="Visit our Facebook page (opens in a new tab)"
-            ><i class="fa-brands fa-facebook"></i></a
-          >
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
         </li>
         <li>
           <a
@@ -73,8 +147,8 @@
             target="_blank"
             rel="noopener"
             aria-label="Visit our twitter page (opens in a new tab)"
-            ><i class="fa-brands fa-square-twitter"></i></a
-          >
+            ><i class="fa-brands fa-square-twitter"></i
+          ></a>
         </li>
         <li>
           <a
@@ -82,8 +156,8 @@
             target="_blank"
             rel="noopener"
             aria-label="Visit our youtube page (opens in a new tab)"
-            ><i class="fa-brands fa-square-youtube"></i></a
-          >
+            ><i class="fa-brands fa-square-youtube"></i
+          ></a>
         </li>
         <li>
           <a
@@ -91,8 +165,8 @@
             target="_blank"
             rel="noopener"
             aria-label="Visit our instagram page (opens in a new tab)"
-            ><i class="fa-brands fa-instagram"></i></a
-          >
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
         </li>
       </ul>
     </footer>
