--- a/signup.html
+++ b/signup.html
@@ -92,7 +92,7 @@
             class="text-input"
             required
           />
-          <div class="radio-buttons">
+          <div id="radio-buttons">
             <div>
               <label for="road">Road</label>
               <input
